--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
 .header-nav{
     display: flex;
     justify-content: space-between;
-    margin: 0px 150px ;}
+    margin: 50px 50px 38px 0px ;}
 /* this is commands for mayem.cv */
 .header-nav .mayemcv{  color: rgb(13, 19, 33);
                         font-family: Azeret Mono;
