--- a/index.css
+++ b/index.css
@@ -37,7 +37,7 @@
                 gap: 32px;
                 justify-content: center;
                 text-align: center;
-                width: 1220px;
+                width: auto;
                 height: 543px;
                 margin-top:35px;
                 
@@ -77,6 +77,8 @@
 /* Commands of second section */
 
 /* whole second section container div */
+
+.second-section{width: auto;}
 .second-section .mota-div{
                             border-radius: 16px;
                             background: rgba(13, 19, 33, 0.02);
@@ -155,8 +157,7 @@ ul> li{
                     line-height: 26px;
                     letter-spacing: 0%;
                     text-align:right;
-                    opacity: 0.7;
-}
+                    opacity: 0.7;}
 
 
 .mota-div .inner-mota3{  display: flex;
@@ -179,8 +180,7 @@ ul> li{
                     line-height: 26px;
                     letter-spacing: 0%;
                     text-align: left;
-                    opacity: 0.7;
-}
+                    opacity: 0.7;}
 
 .mota-btn{  font-family: Azeret Mono;
             display: flex;
@@ -200,4 +200,116 @@ ul> li{
                 align-items: center;
                 align-content: center;}
 
-                
+
+/* whole third section container div */
+
+
+.third-section{
+   margin-top: 88px;
+   padding: 20px;
+}
+
+.easy-hp .bg-hp{
+    text-align: center;
+}
+
+
+
+.easy-vdo{ box-sizing: border-box;
+            border: 1px solid rgba(13, 19, 33, 0.2);
+            border-radius: 16px;
+            display: flex;
+            justify-content: center;
+            align-items:center;
+            padding: 20px;
+            border: 0px 20px;
+            margin-bottom: 180px;
+            
+                   
+  
+}
+
+.third-section-h{
+             color: rgb(13, 19, 33);
+            font-family: Azeret Mono;
+            font-size: 32px;
+            font-weight: 800;
+            line-height: 37px;
+            text-align: center;
+            margin-bottom: 48px
+
+            
+}
+
+.third-section-P{color: rgb(13, 19, 33);
+        font-family: Azeret Mono;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 26px;
+        letter-spacing: 0%;
+        text-align: center;
+        opacity: 0.7;
+        margin-bottom: 24px
+}
+
+
+.anchor{ margin: 24px 0px;
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 19px;
+    text-align: left;}
+
+
+.bg-container{
+    display: flex;
+    flex: auto;
+    justify-content: space-between;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0px;
+   
+}
+
+
+
+.bg-container1{ border-radius: 16px;
+                background: rgba(255, 76, 30, 0.05);
+                padding: 40px;
+                margin: 0px 15px;}
+
+
+.bg-container2{ border-radius: 16px;
+                background: rgba(0, 76, 232, 0.05);
+                padding: 40px;
+                margin: 0px 15px;}
+
+.bg-container3{ border-radius: 16px;
+                background: rgba(255, 223, 0, 0.05);
+                padding: 40px;
+                margin: 0px 15px;}
+
+
+.bg-container-head{color: rgb(13, 19, 33);
+                    font-family: Azeret Mono;
+                    font-size: 24px;
+                    font-weight: 800;
+                    line-height: 36px;
+                    letter-spacing: 0%;
+                    text-align: left;}
+
+.bg-container-p{color: rgb(13, 19, 33);
+                font-family: Azeret Mono;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 26px;
+                text-align: left;
+                opacity: 0.7;
+
+
+}
+
+
+
+                    
