--- a/index.css
+++ b/index.css
@@ -38,7 +38,7 @@
                 justify-content: center;
                 text-align: center;
                 width: auto;
-                height: 543px;
+                height: 643px;
                 margin-top:35px;
                 
 }
@@ -330,13 +330,13 @@ ul> li{
                     position: absolute;
                     width:1100px;
                     display: flex;
-                    flex-direction: column;
                     justify-content: flex-start;
                     align-items: flex-start;
                     padding: 64px 48px 64px 48px;
                     border-radius: 16px;
                     background: rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),url(Email);
-                    margin-left: 20px;
+                    margin: 50px 0px 180px 20px;
+                    
 }
 .fourth-h{
     color: rgb(255, 255, 255);
@@ -385,3 +385,24 @@ ul> li{
             align-items: center;
             padding: 17px 20px 17px 20px;
             }
+.footer{
+        margin: 500px 0px 50px 40px;
+        display:flex;
+        
+        
+}
+
+.footer-h{color: rgb(13, 19, 33);
+        font-family: Azeret Mono;
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 23px;
+        letter-spacing: 0%;
+        text-align: center;}
+
+.icon{      disply:flex;
+            justify-content:space-between;
+
+            margin-left:500px ;}
+.footer-icon1{ margin-right: 15px;}
+.footer-icon2{ margin-right:15px ;}
