--- a/index.css
+++ b/index.css
@@ -2,29 +2,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap');
 /* Bold 700 */
 
+*{margin: 0%;}
 
 
 /* commands of header-nav */
 .header-nav{
     display: flex;
     justify-content: space-between;
-    margin: 50px 50px 38px 0px ;}
+    margin: 20px 50px 20px 0px ;}
 /* this is commands for mayem.cv */
 .header-nav .mayemcv{  color: rgb(13, 19, 33);
                         font-family: Azeret Mono;
                         font-size: 25px;
                         font-weight: 800;
-                        margin: 0px 150px; }
+                        margin: 0px 100px; }
 /* commands for download resume button */
 .header-nav .d-resume-btn{justify-content: center;
                         align-items: center;
                         padding: 17px 24px 17px 24px;
-                        width: 228px;
-                        height: 58px;
+                        width: 220px;
+                        height: 50px;
                         box-sizing: border-box;
                         border: 1px solid rgb(13, 19, 33);
-                        border-radius: 8px;
+                        border-radius: 10px;
                         opacity: 0.8;
+
                     }
 
                         
@@ -39,7 +41,7 @@
                 text-align: center;
                 width: auto;
                 height: 643px;
-                margin-top:35px;
+                margin-top:25px;
                 
 }
  /* commands for h1 in the first section                                     */
@@ -78,7 +80,9 @@
 
 /* whole second section container div */
 
-.second-section{width: auto;}
+.second-section{width: auto;
+                border-radius: 16px;
+                background: rgba(13, 19, 33, 0.02);}
 .second-section .mota-div{
                             border-radius: 16px;
                             background: rgba(13, 19, 33, 0.02);
@@ -93,6 +97,8 @@
                                 font-size: 32px;
                                 font-weight: 800;
                                 line-height: 37px;
+                                border-radius: 16px;
+                                background: rgba(13, 19, 33, 0.02);
                             }
 
 
@@ -104,6 +110,8 @@
                             line-height: 26px;
                             text-align: center;
                             opacity: 0.7;
+                            border-radius: 16px;
+                            background: rgba(13, 19, 33, 0.02);
                         }
 /* commands for all inner contains */
 
@@ -149,14 +157,14 @@ ul> li{
                 font-size: 24px;
                 font-weight: 700;
                 line-height: 36px;
-                text-align:right;}
+                text-align:left;}
 .div-contain2-p{    color: rgb(13, 19, 33);
                     font-family: Azeret Mono;
                     font-size: 16px;
                     font-weight: 400;
                     line-height: 26px;
                     letter-spacing: 0%;
-                    text-align:right;
+                    text-align:left;
                     opacity: 0.7;}
 
 
@@ -386,11 +394,11 @@ ul> li{
             padding: 17px 20px 17px 20px;
             }
 .footer{
-        margin: 500px 0px 50px 40px;
+        margin: 400px 0px 50px 40px;
         display:flex;
-        
-        
-}
+        border-radius: 16px;
+        background: rgba(13, 19, 33, 0.03);
+        }
 
 .footer-h{color: rgb(13, 19, 33);
         font-family: Azeret Mono;
@@ -400,9 +408,8 @@ ul> li{
         letter-spacing: 0%;
         text-align: center;}
 
-.icon{      disply:flex;
+.icon{      display:flex;
             justify-content:space-between;
-
-            margin-left:500px ;}
+             margin-left:500px ;}
 .footer-icon1{ margin-right: 15px;}
 .footer-icon2{ margin-right:15px ;}
